* Paypal Express: Add checkout status to response object [mbreenlyles] #4467
* Shift4: Scrub security code [naashton] #4470
* Shift4: Update `cardOnFile` transaction requests [ajawadmirza] #4471
* Plexo: Update `success_from` definition [ajawadmirza] #4468
* Rapyd: Un-nest the payment urls [naashton] #4472
* Paypal Express: Correct naming mistake for accessor [mbreenlyles] #4473

== Version 1.126.0 (April 15th, 2022)
* Moneris: Add 3DS MPI field support [esmitperez] #4373
* StripePI: Add ability to change payment_method_type to confirm_intent [aenand] #4300
* GlobalCollect: Improve support for Naranja and Cabal card types [dsmcclain] #4286
* Payflow: Add support for stored credentials [ajawadmirza] #4277
* Orbital: Don't void $0 auths for Verify [javierpedrozaing] #2487
* StripePI: Enable Apple Pay and Google Pay payment methods [gasb150] #4252
* PaySafe: Update `unstore` method and authorization for redact [ajawadmirza] #4294
* CyberSource: Add `national_tax_indicator` fields in authorize and purchase [ajawadmirza] #4299
* NMI: Update gateway credentials to accept security_key [javierpedrozaing] #4302
* PaySafe: Fix commit for `unstore` method [ajawadmirza] #4303
* Ebanx: Add support for `order_number` field [ali-hassan] #4304
* BlueSnap: Add support for  `idempotency_key` field [drkjc] #4305
* Paymentez: Update `capture` method to verify by otp for pending transactions [ajawadmirza] #4267
* BlueSnap: Update refund request and endpoint along with merchant transaction support [ajawadmirza] #4307
* DecidirPlus: Added `authorize`, `capture`, `void`, and `verify` methods [ajawadmirza] #4284
* Paymentez: Fix `authorize` to call `purchase` for otp flow [ajawadmirza] #4310
* Orbital: Indicate support for network tokenization [dsmcclain] #4309
* IPG: remove `uruguay` from supported countries [ajawadmirza] #4311
* Decidir: Add sub_payments sub-fields to gateway [meagabeth] #4315
* Priority: Add additional fields to purchase and capture requests [dsmcclain] #4301