@@ -9,6 +9,27 @@ class GlobalCollectTest < Test::Unit::TestCase
                                         secret_api_key: '109H/288H*50Y18W4/0G8571F245KA=')
 
     @credit_card = credit_card('4567350000427977')
+    @apple_pay_network_token = network_tokenization_credit_card('4444333322221111',
+      month: 10,
+      year: 24,
+      first_name: 'John',
+      last_name: 'Smith',
+      eci: '05',
+      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=',
+      source: :apple_pay)
+
+    @google_pay_network_token = network_tokenization_credit_card('4444333322221111',
+      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=',
+      month: '01',
+      year: Time.new.year + 2,
+      source: :google_pay,
+      transaction_id: '123456789',
+      eci: '05')
+
+    @google_pay_pan_only = credit_card('4444333322221111',
+      month: '01',
+      year: Time.new.year + 2)
+
     @declined_card = credit_card('5424180279791732')
     @accepted_amount = 4005
     @rejected_amount = 2997
@@ -69,6 +90,129 @@ class GlobalCollectTest < Test::Unit::TestCase
       @gateway.purchase(@accepted_amount, @credit_card, @options.merge(requires_approval: true))
     end.check_request do |endpoint, data, headers|
     end.respond_with(successful_authorize_response, successful_capture_response)
+  end
+
+  def test_purchase_request_with_google_pay
+    stub_comms do
+      @gateway.purchase(@accepted_amount, @google_pay_network_token)
+    end.check_request(skip_response: true) do |_endpoint, data, _headers|
+      assert_equal '320', JSON.parse(data)['mobilePaymentMethodSpecificInput']['paymentProductId']
+    end
+  end
+
+  def test_purchase_request_with_google_pay_pan_only
+    stub_comms do
+      @gateway.purchase(@accepted_amount, @google_pay_pan_only, @options.merge(customer: 'GP1234ID', google_pay_pan_only: true))
+    end.check_request(skip_response: true) do |_endpoint, data, _headers|
+      assert_equal '320', JSON.parse(data)['mobilePaymentMethodSpecificInput']['paymentProductId']
+    end
+  end
+
+  def test_add_payment_for_credit_card
+    post = {}
+    options = {}
+    payment = @credit_card
+    @gateway.send('add_payment', post, payment, options)
+    assert_includes post.keys, 'cardPaymentMethodSpecificInput'
+    assert_equal post['cardPaymentMethodSpecificInput']['paymentProductId'], '1'
+    assert_equal post['cardPaymentMethodSpecificInput']['authorizationMode'], 'FINAL_AUTHORIZATION'
+    assert_includes post['cardPaymentMethodSpecificInput'].keys, 'card'
+    assert_equal post['cardPaymentMethodSpecificInput']['card']['cvv'], '123'
+    assert_equal post['cardPaymentMethodSpecificInput']['card']['cardNumber'], '4567350000427977'
+  end
+
+  def test_add_payment_for_google_pay
+    post = {}
+    options = {}
+    payment = @google_pay_network_token
+    @gateway.send('add_payment', post, payment, options)
+    assert_includes post.keys.first, 'mobilePaymentMethodSpecificInput'
+    assert_equal post['mobilePaymentMethodSpecificInput']['paymentProductId'], '320'
+    assert_equal post['mobilePaymentMethodSpecificInput']['authorizationMode'], 'FINAL_AUTHORIZATION'
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['dpan'], '4444333322221111'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['cryptogram'], 'EHuWW9PiBkWvqE5juRwDzAUFBAk='
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['eci'], '05'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['expiryDate'], '0124'
+    assert_equal 'TOKENIZED_CARD', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['paymentMethod']
+  end
+
+  def test_add_payment_for_google_pay_pan_only
+    post = {}
+    options = { google_pay_pan_only: true }
+    payment = @google_pay_pan_only
+    @gateway.send('add_payment', post, payment, options)
+    assert_includes post.keys.first, 'mobilePaymentMethodSpecificInput'
+    assert_equal post['mobilePaymentMethodSpecificInput']['paymentProductId'], '320'
+    assert_equal post['mobilePaymentMethodSpecificInput']['authorizationMode'], 'FINAL_AUTHORIZATION'
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['pan'], '4444333322221111'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['expiryDate'], '0124'
+    assert_equal 'CARD', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['paymentMethod']
+  end
+
+  def test_add_payment_for_apple_pay
+    post = {}
+    options = {}
+    payment = @apple_pay_network_token
+    @gateway.send('add_payment', post, payment, options)
+    assert_includes post.keys, 'mobilePaymentMethodSpecificInput'
+    assert_equal post['mobilePaymentMethodSpecificInput']['paymentProductId'], '302'
+    assert_equal post['mobilePaymentMethodSpecificInput']['authorizationMode'], 'FINAL_AUTHORIZATION'
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['dpan'], '4444333322221111'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['cryptogram'], 'EHuWW9PiBkWvqE5juRwDzAUFBAk='
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['eci'], '05'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['expiryDate'], '1024'
+  end
+
+  def test_add_decrypted_data_google_pay_pan_only
+    post = { 'mobilePaymentMethodSpecificInput' => {} }
+    payment = @google_pay_pan_only
+    options = { google_pay_pan_only: true }
+    expirydate = '0124'
+
+    @gateway.send('add_decrypted_payment_data', post, payment, options, expirydate)
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['pan'], '4444333322221111'
+    assert_equal 'CARD', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['paymentMethod']
+  end
+
+  def test_add_decrypted_data_for_google_pay
+    post = { 'mobilePaymentMethodSpecificInput' => {} }
+    payment = @google_pay_network_token
+    options = {}
+    expirydate = '0124'
+
+    @gateway.send('add_decrypted_payment_data', post, payment, options, expirydate)
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['cryptogram'], 'EHuWW9PiBkWvqE5juRwDzAUFBAk='
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['eci'], '05'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['dpan'], '4444333322221111'
+    assert_equal 'TOKENIZED_CARD', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['paymentMethod']
+    assert_equal '0124', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['expiryDate']
+  end
+
+  def test_add_decrypted_data_for_apple_pay
+    post = { 'mobilePaymentMethodSpecificInput' => {} }
+    payment = @google_pay_network_token
+    options = {}
+    expirydate = '0124'
+
+    @gateway.send('add_decrypted_payment_data', post, payment, options, expirydate)
+    assert_includes post['mobilePaymentMethodSpecificInput'].keys, 'decryptedPaymentData'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['cryptogram'], 'EHuWW9PiBkWvqE5juRwDzAUFBAk='
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['eci'], '05'
+    assert_equal post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['dpan'], '4444333322221111'
+    assert_equal '0124', post['mobilePaymentMethodSpecificInput']['decryptedPaymentData']['expiryDate']
+  end
+
+  def test_purchase_request_with_apple_pay
+    stub_comms do
+      @gateway.purchase(@accepted_amount, @apple_pay_network_token)
+    end.check_request(skip_response: true) do |_endpoint, data, _headers|
+      assert_equal '302', JSON.parse(data)['mobilePaymentMethodSpecificInput']['paymentProductId']
+    end
   end
 
   # When requires_approval is false, a `purchase` makes one call (`auth`).
