@@ -55,6 +55,7 @@
 * Plexo: Update `success_from` definition [ajawadmirza] #4468
 * Rapyd: Un-nest the payment urls [naashton] #4472
 * Paypal Express: Correct naming mistake for accessor [mbreenlyles] #4473
+* GlobalCollect: Enable Google Pay and Apple Pay [gasb150] #4388
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
